# blocks-engine

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
assets/shaders/: common.sc
assets/shaders/color/: common.sh  fragment_color.sc  vertex_color.sc
cmake/: helpers.cmake  vcpkg.cmake
include/core/: Application.h  Entity.h  EntityManager.h  Keyboard.h  LayerManager.h  Mouse.h  Renderer.h  SceneManager.h  ShaderManager.h  Window.h
include/engine/: Camera.h  Entity.h  Game.h  Inputable.h  Movable.h  Player.h  Renderable.h  Shader.h  Timer.h  Updatable.h
include/graphics/: Layer.h  Renderable.h  RenderableEmpty.h  Scene.h  Shader.h  ShaderLoader.h  ShaderProgram.h
include/layers/: MeshLayer.h  UILayer.h  Views.h
include/primitive/: Color.h  Cube.h  Mesh.h  MeshEntity.h  Plane.h  VertexColor.h
include/scenes/: AnotherScene.h  TestScene.h
include/shaders/: ColorShader.h
scripts/: shaderc.sh
src/core/: Application.cpp  Entity.cpp  EntityManager.cpp  Keyboard.cpp  LayerManager.cpp  Mouse.cpp  Renderer.cpp  SceneManager.cpp  ShaderManager.cpp  Window.cpp
src/engine/: Camera.cpp  Entity.cpp  Game.cpp  Inputable.cpp  Movable.cpp  Player.cpp  Renderable.cpp  Shader.cpp  Timer.cpp  Updatable.cpp
src/graphics/: Layer.cpp  Renderable.cpp  Scene.cpp  Shader.cpp  ShaderLoader.cpp  ShaderProgram.cpp
src/layers/: MeshLayer.cpp  UILayer.cpp
src/primitive/: Color.cpp  Cube.cpp  Mesh.cpp  MeshEntity.cpp  Plane.cpp  VertexColor.cpp
src/scenes/: AnotherScene.cpp  TestScene.cpp
src/shaders/: ColorShader.cpp
(+5 files in other folders)
